<resources>
    <string name="app_name">CarShare</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="create_new_user">Create New User</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="date_of_travel">Date of Travel</string>
    <string name="departure_city">Departure City</string>
    <string name="arrival_city">Arrival City</string>
    <string name="date">Date</string>
    <string name="create_request">Create Request</string>
    <string name="plan_your_next_carpool">Plan Your Next Carpool</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>