<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateRequestActivity">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/departure"
        app:layout_constraintBottom_toBottomOf="@+id/et_departure"
        app:layout_constraintEnd_toStartOf="@+id/et_departure"
        app:layout_constraintTop_toTopOf="@+id/et_departure"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival"
        app:layout_constraintBottom_toBottomOf="@+id/et_arrival"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/et_arrival" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_travel"
        app:layout_constraintBottom_toBottomOf="@+id/et_leave_date"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/et_leave_date" />


    <EditText
        android:id="@+id/et_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/departure_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="254dp" />


    <EditText
        android:id="@+id/et_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/arrival_city"
        app:layout_constraintTop_toBottomOf="@+id/et_departure"
        tools:layout_editor_absoluteX="158dp" />


    <EditText
        android:id="@+id/et_leave_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"

        android:inputType="date"
        android:hint="@string/date"
        app:layout_constraintEnd_toEndOf="@+id/et_arrival"
        app:layout_constraintStart_toStartOf="@+id/et_arrival"
        app:layout_constraintTop_toBottomOf="@+id/et_arrival" />

    <Button
        android:id="@+id/btn_create_new_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_request"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_leave_date" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Plan Your Next Carpool"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_departure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>